this is second commit add more detials

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <body>
 <h1>This is devops web site</h1>
 <p>how to get our html css java script code on live server</p>
+<p>detials</p>
 <p>:) X) :D XD </p>
+
 </body>
 </html>
